Single conversion works.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ pkg_check_modules(GTKMM gtkmm-3.0)
 link_directories(${GTKMM_LIBRARY_DIRS})
 include_directories(${GTKMM_INCLUDE_DIRS})
 
-set(SOURCE_FILES main.cpp Converter.cpp Converter.h ConversionError.cpp ConversionError.h)
+set(SOURCE_FILES main.cpp Converter.cpp Converter.h ConversionError.cpp ConversionError.h ConversionWorker.cpp ConversionWorker.h)
 set(CONVERSION_TEST_FILES Converter.h Converter.cpp ConversionError.h ConversionError.cpp ConversionTest.cpp)
 add_executable(oziexplorer_uiview_converter ${SOURCE_FILES})
 if(_type STREQUAL debug)
