--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.3)
 project(oziexplorer_uiview_converter)
 string(TOLOWER ${CMAKE_BUILD_TYPE} _type)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -static-libgcc -static-libstdc++")
 find_package(PkgConfig)
 pkg_check_modules(GTKMM gtkmm-3.0)
 
